crates/conjure-cp/tests/ui/fail/test_variable.rs
use conjure_cp::essence_expr;

fn main() {
    let x = 2;
    essence_expr!(x + 2);
}